BUG: Fix label for project description

--- a/.github/ISSUE_TEMPLATE/project-proposal.yml
+++ b/.github/ISSUE_TEMPLATE/project-proposal.yml
@@ -23,7 +23,7 @@ body:
     
 - type: textarea
   attributes:
-    label: Key Investigators
+    label: Project Description
     description: Add a short paragraph describing the project.
     render: markdown
   validations:
