Rename "project-proposal" issue template to "proposal"

--- a/.github/ISSUE_TEMPLATE/proposal.yml
+++ b/.github/ISSUE_TEMPLATE/proposal.yml
@@ -1,4 +1,4 @@
-name: Project Proposal
+name: Proposal
 description: Issue template for creating an issue supporting discussion around a project concept or idea.
 title: "Proposal: "
 labels: ["proposal", "event:PW39_2023_Montreal"]
