PW39_2023_Montreal: Auto-generate project listing
* Update "project" issue template to include "Category" dropdown

* Update top-level README associated with the event to include
  the "project_categories" front-matter entry.

* Update existing project to include the "category" front-matter entry.

* Caveat: The current implementation does not respect the category order
  specified in "project_categories".

--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -10,6 +10,21 @@ assignees:
   - tkapur
 
 body:
+
+  - type: dropdown
+    attributes:
+      label: Category
+      description: Select a category that best describes your project. This will help others to quickly understand the focus of your project.
+      options:
+        - VR/AR and Rendering
+        - IGT and Training
+        - Segmentation / Classification / Landmarking
+        - Quantification and Computation
+        - Cloud / Web
+        - Infrastructure
+    validations:
+      required: true
+
 - type: textarea
   attributes:
     label: Key Investigators
