PW39_2023_Montreal: Describe Uncategorized section, and suggest how to add new one

--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -24,6 +24,10 @@ body:
         - Infrastructure
     validations:
       required: true
+  - type: markdown
+    attributes:
+      value: |
+        _If you are unable to find a category that is suitable for your project, or believe that a specific category is missing, please discuss it with the organizers._
 
 - type: textarea
   attributes:
