--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -16,12 +16,12 @@ body:
       label: Category
       description: Select a category that best describes your project. This will help others to quickly understand the focus of your project.
       options:
-        - VR/AR and Rendering
-        - IGT and Training
-        - Segmentation / Classification / Landmarking
-        - Quantification and Computation
-        - Cloud / Web
-        - Infrastructure
+        - "VR/AR and Rendering"
+        - "IGT and Training"
+        - "Segmentation / Classification / Landmarking"
+        - "Quantification and Computation"
+        - "Cloud / Web"
+        - "Infrastructure"
     validations:
       required: true
   - type: markdown
