Fix indent in "project" issue template

--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -11,23 +11,23 @@ assignees:
 
 body:
 
-  - type: dropdown
-    attributes:
-      label: Category
-      description: Select a category that best describes your project. This will help others to quickly understand the focus of your project.
-      options:
-        - "VR/AR and Rendering"
-        - "IGT and Training"
-        - "Segmentation / Classification / Landmarking"
-        - "Quantification and Computation"
-        - "Cloud / Web"
-        - "Infrastructure"
-    validations:
-      required: true
-  - type: markdown
-    attributes:
-      value: |
-        _If you are unable to find a category that is suitable for your project, or believe that a specific category is missing, please discuss it with the organizers._
+- type: dropdown
+  attributes:
+    label: Category
+    description: Select a category that best describes your project. This will help others to quickly understand the focus of your project.
+    options:
+      - VR/AR and Rendering
+      - IGT and Training
+      - Segmentation / Classification / Landmarking
+      - Quantification and Computation
+      - Cloud / Web
+      - Infrastructure
+  validations:
+    required: true
+- type: markdown
+  attributes:
+    value: |
+      _If you are unable to find a category that is suitable for your project, or believe that a specific category is missing, please discuss it with the organizers._
 
 - type: textarea
   attributes:
@@ -108,4 +108,3 @@ body:
     render: markdown
   validations:
     required: false
-
