Simplify handling of investigator names
This commit revisits how investigator names are processed. Instead of
attempting to parse first and last names, it treats the string of
representing "FirstName LastName" as single entity.

Summary of changes:
- Update placeholder displayed in Project issue template
- Update front-matter of existing project having only the "name" key
- Update generation of project listing for the main page
- Update extraction of name, county and affiliation in GitHub workflow
  generating the pull-request

--- a/.github/workflows/project-page-pull-request.yml
+++ b/.github/workflows/project-page-pull-request.yml
@@ -121,8 +121,8 @@ jobs:
           "illustrations": .illustrations.text,
           "background": .["background-and-references"].text,
           "investigators": [.["key-investigators"].list[].text |
-            capture("(?<firstname>[^,]+)(?:[[:space:]]+[[:alpha:]]+)*,[[:space:]]+(?<lastname>[^,]+(?:[[:space:]]+[[:alpha:]]+)*?) \\((?<affiliation>[^,]+)(?:, (?<country>[^)]+))?\\)") |
-            {firstname, lastname, affiliation, country: (.country // "")}],
+            capture("(?<name>[^\\s]+(?:\\s[^\\s]+)*?)\\s*\\((?<affiliation>[^,]*)(?:,\\s*(?<country>[^)]*))?\\)") |
+            {name, affiliation: (.affiliation // ""), country: (.country // "")}],
         }' > ${{ runner.temp }}/template-data.json
 
     - name: Display template-data.json
