--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -33,9 +33,9 @@ body:
   attributes:
     label: Key Investigators
     placeholder: |
-      - FirstName1, LastName1 (Affiliation, Country)
-      - FirstName2, LastName2 (Affiliation, Country)
-      - FirstName3, LastName3 (Affiliation, Country)
+      - FirstName1 LastName1 (Affiliation, Country)
+      - FirstName2 LastName2 (Affiliation, Country)
+      - FirstName3 LastName3 (Affiliation, Country)
   validations:
     required: true
 
