--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -11,6 +11,11 @@ assignees:
 
 body:
 
+- type: markdown
+  attributes:
+    value: |
+      _Please enter a project name in the title bar above this text. Format: "Project: Project Name"._
+
 - type: dropdown
   attributes:
     label: Category
@@ -31,7 +36,7 @@ body:
 
 - type: textarea
   attributes:
-    label: Key Investigators
+    label: Key Investigators (  Format: FirstName1 LastName1 (Affiliation, Country)  )
     placeholder: |
       - FirstName1 LastName1 (Affiliation, Country)
       - FirstName2 LastName2 (Affiliation, Country)
