--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -36,7 +36,7 @@ body:
 
 - type: textarea
   attributes:
-    label: Key Investigators (  Format: FirstName1 LastName1 (Affiliation, Country)  )
+    label: Key Investigators, Format: FirstName1 LastName1 (Affiliation, Country)  
     placeholder: |
       - FirstName1 LastName1 (Affiliation, Country)
       - FirstName2 LastName2 (Affiliation, Country)
