Add redirects from Readme.html to README.html
This commit adds redirection only to pages previously rendered
as Readme.html.

The change is only applied to pages associated with a front matter
because the one without it are always rendered as "index.html"
whether they were named Readme.md, readme.md, or README.md

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,11 @@ repository: NA-MIC/ProjectWeek
 
 plugins:
   - jekyll-mentions
+  - jekyll-redirect-from
   - jemoji
+
+redirect_from:
+  json: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
