update project creation instructions

--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -44,6 +44,12 @@ body:
   validations:
     required: true
 
+- type: markdown
+  attributes:
+    value: |
+      *Please note the formatting on the Key Investigators list:*
+      `- Firstname Lastname (Affiliation, Country)`
+
 - type: textarea
   attributes:
     label: Project Description
