--- a/.github/workflows/project-page-pull-request.yml
+++ b/.github/workflows/project-page-pull-request.yml
@@ -54,7 +54,7 @@ jobs:
       id: event_info
       run: |
         # TODO: Extract event name from "event:NAME" label
-        event_name="PW39_2023_Montreal"
+        event_name="PW40_2024_GranCanaria"
         echo "name=$event_name" >> $GITHUB_OUTPUT
 
     - uses: actions/checkout@v3
