PW40_2024_GranCanaria: Add "Other" as a project category
Suggested-by: Ron Kikinis <ron@kikinis.org>

--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -27,6 +27,7 @@ body:
       - Quantification and Computation
       - Cloud / Web
       - Infrastructure
+      - Other
   validations:
     required: true
 
