--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -31,6 +31,7 @@ body:
     label: Category
     description: Select a category that best describes your project. This will help others to quickly understand the focus of your project.
     options:
+      - DICOM
       - VR/AR and Rendering
       - IGT and Training
       - Segmentation / Classification / Landmarking
