--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -36,6 +36,7 @@ body:
       - IGT and Training
       - Segmentation / Classification / Landmarking
       - Quantification and Computation
+      - Registration
       - Cloud / Web
       - Infrastructure
       - Other
