--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -1,7 +1,7 @@
 name: Project
 description: Issue template to streamline the creation of project pages.
 title: "Project: "
-labels: ["project", "event:PW41_2024_MIT"]
+labels: ["project", "event:PW_42_GranCanaria"]
 assignees:
   - sjh26
 
