--- a/.github/workflows/issue-labeler.yml
+++ b/.github/workflows/issue-labeler.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   label-component:
-    if: github.event.label.name == 'project'
+    if: contains(github.event.issue.labels.*.name, 'project')
     runs-on: ubuntu-latest
 
     permissions:
