--- a/.github/workflows/draft-to-ready.yml
+++ b/.github/workflows/draft-to-ready.yml
@@ -1,9 +1,10 @@
 name: Apply ready label on draft label removal
-
 on:
   issues:
     types: [ unlabeled ]
 
+permissions:
+  contents: read
 
 jobs:
   apply-ready:
@@ -12,13 +13,14 @@ jobs:
     permissions:
       issues: write
     
-    - name: Add "ready" label
-      uses: actions/github-script@v6
-      with:
-        script: |
-          github.rest.issues.addLabels({
-            issue_number: context.payload.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            name: ["ready"]
-          })
+    steps:
+      - name: Add "ready" label
+        uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: context.payload.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ["ready"]
+            })
