--- a/.github/workflows/draft-to-ready.yml
+++ b/.github/workflows/draft-to-ready.yml
@@ -22,5 +22,5 @@ jobs:
               issue_number: context.payload.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              name: ["ready"]
+              labels: ["ready"]
             })
