--- a/.github/ISSUE_TEMPLATE/proposal.yml
+++ b/.github/ISSUE_TEMPLATE/proposal.yml
@@ -1,7 +1,7 @@
 name: Proposal
 description: Issue template for creating an issue supporting discussion around a project concept or idea (Does NOT trigger page creation.  You will still need to create a project page later).
 title: "Proposal: "
-labels: ["proposal", "event:PW42_2025_GranCanaria"]
+labels: ["proposal", "event:PW43_2025_Montreal"]
 assignees:
   - sjh26
 
