--- a/.github/ISSUE_TEMPLATE/project.yml
+++ b/.github/ISSUE_TEMPLATE/project.yml
@@ -66,7 +66,7 @@ body:
     label: Project Description
     description: Add a short paragraph describing the project.
   validations:
-    required: true
+    required: false
 
 - type: textarea
   attributes:
